tests/snapshots/help_snapshot__raw_help.snap
---
source: tests/help_snapshot.rs
expression: "help(&[\"raw\", \"--help\"])"
---
Send a raw bridge command with a JSON args payload (escape hatch for bridge commands that have no dedicated subcommand, e.g. find_constant, read_memory, write_memory)

Usage: gd raw [OPTIONS] <COMMAND> [JSON]

Arguments:
  <COMMAND>  Bridge command name (e.g. find_constant, decompile_multi, read_memory, ping)
  [JSON]     JSON object payload sent as the command args (default "{}") [default: {}]

Options:
      --program <PROGRAM>            
      --project <PROJECT>            
  -f, --filter <FILTER>              Filter expression: <field><op><value>, e.g. 'name~PK' (contains), 'name=~"^PK_"' (regex), 'size>100'. Ops: = != > >= < <= ~ ^ $ =~. Combine with AND/OR/NOT. Bare words are rejected
      --fields <FIELDS>              
  -o, --format <FORMAT>              
      --limit <LIMIT>                Maximum number of results (0 = unlimited; default 1000)
      --offset <OFFSET>              
      --sort <SORT>                  
      --count                        
      --json                         
  -v, --verbose...                   Increase log verbosity printed to stdout (-v=warn, -vv=info, -vvv=debug)
  -q, --quiet                        Suppress non-essential output
      --pretty                       Output JSON with pretty formatting
      --projects-dir <PROJECTS_DIR>  Directory under which Ghidra projects are stored. Overrides config `ghidra_project_dir` and the default location. Note: Ghidra 12.1+ rejects paths containing a dot-prefixed component
      --java-home <JAVA_HOME>        Full JDK home for Ghidra to use (must be a JDK, not a JRE). Overrides config `java_home` and auto-detection
  -h, --help                         Print help
