tests/snapshots/help_snapshot__xref_help.snap
---
source: tests/help_snapshot.rs
expression: "help(&[\"x-ref\", \"--help\"])"
---
Cross-reference operations

Usage: gd x-ref [OPTIONS] <COMMAND>

Commands:
  to    Get cross-references to address
  from  Get cross-references from address
  list  List all cross-references
  help  Print this message or the help of the given subcommand(s)

Options:
  -v, --verbose...                   Increase log verbosity printed to stdout (-v=warn, -vv=info, -vvv=debug)
  -q, --quiet                        Suppress non-essential output
      --json                         Output as JSON
      --pretty                       Output JSON with pretty formatting
      --project <PROJECT>            Project name or path (can also be specified per-subcommand)
      --program <PROGRAM>            Program name within the project (can also be specified per-subcommand)
      --projects-dir <PROJECTS_DIR>  Directory under which Ghidra projects are stored. Overrides config `ghidra_project_dir` and the default location. Note: Ghidra 12.1+ rejects paths containing a dot-prefixed component
      --java-home <JAVA_HOME>        Full JDK home for Ghidra to use (must be a JDK, not a JRE). Overrides config `java_home` and auto-detection
  -h, --help                         Print help
